rgbds-0.6.1/test/asm/ds-bad.err
error: ds-bad.asm(3):
    Expected constant expression: 'unknown' is not constant at assembly time
warning: ds-bad.asm(4): [-Wtruncation]
    Expression must be 8-bit
error: Assembly aborted (1 error)!
