rgbds-0.6.1/test/asm/ds-bad.asm
SECTION "test", ROM0[0]

	ds unknown, 0
	ds 1, $100
